--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "symfony/http-foundation": "2.5.*@stable"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*",
