--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "symfony/http-foundation": "2.5.*@stable"
+        "symfony/http-foundation": "~2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*",
